syntax = "proto3";

package message;

import "google/protobuf/empty.proto";

service MessageService {
  // 发送聊天消息
  rpc SendChat (Chat) returns (google.protobuf.Empty);
  // 撤回消息
  rpc SendRecall (Recall) returns (google.protobuf.Empty);
  // 通知消息
  rpc SendNotify (Notify) returns (google.protobuf.Empty);
  // 朋友圈更新消息
  rpc SendMoment (Moment) returns (google.protobuf.Empty);
}

message Moment {
  int32 user_id = 1;  // 用户id
  int32 to_id = 2;    // 接收者id
  string avatar = 3;  // 头像
  string type = 4;    // 类型
}

message Notify {
  string type = 1;    // 通知类型
  int32 to_id = 2;    // 接受者id
}

message Recall {
  string id = 1;        // 消息id
  int32 from_id = 2;    // 发送者id
  int32 to_id = 3;      // 接收者id
  int32 chat_type = 4;  // 聊天类型
}

message Chat {
  string id = 1;        // 消息id
  From from = 2;        // 发送对象
  int32 to_id = 3;      // 接受人id
  int32 chat_type = 4;  // 聊天类型
  int32 type = 5;       // 消息类型
  string options = 6;   // 扩展信息
  string content = 7;   // 消息内容
  int64 t = 8;          // 发送时间戳
}

message From{
  int32 id = 1;       // 用户/群组ID
  string name = 2;    // 用户/群组昵称
  string avatar = 3;  // 用户/群组头像
}